// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all_nft_info_response 1`] = `
"export interface AllNftInfoResponse {
  access: OwnerOfResponse;
  info: NftInfoResponse_for_Empty;
}"
`;

exports[`approval_response 1`] = `
"export interface ApprovalResponse {
  approval: Approval;
}"
`;

exports[`approvals_response 1`] = `
"export interface ApprovalsResponse {
  approvals: Approval[];
}"
`;

exports[`collection_info_response 1`] = `
"export interface CollectionInfoResponse {
  creator: string;
  description: string;
  externalLink: string;
  image: string;
  royaltyInfo: RoyaltyInfoResponse;
}"
`;

exports[`contract_info_response 1`] = `
"export interface ContractInfoResponse {
  name: string;
  symbol: string;
}"
`;

exports[`execute classes no extends 1`] = `
"export class SG721Client implements SG721Instance {
  client: SigningCosmWasmClient;
  sender: string;
  contractAddress: string;

  constructor(client: SigningCosmWasmClient, sender: string, contractAddress: string) {
    this.client = client;
    this.sender = sender;
    this.contractAddress = contractAddress;
    this.transferNft = this.transferNft.bind(this);
    this.sendNft = this.sendNft.bind(this);
    this.approve = this.approve.bind(this);
    this.revoke = this.revoke.bind(this);
    this.approveAll = this.approveAll.bind(this);
    this.revokeAll = this.revokeAll.bind(this);
    this.mint = this.mint.bind(this);
    this.burn = this.burn.bind(this);
  }

  transferNft = async ({
    recipient,
    token_id
  }: {
    recipient: string;
    token_id: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      transfer_nft: {
        recipient,
        token_id: tokenId
      }
    }, \\"auto\\");
  };
  sendNft = async ({
    contract,
    msg,
    token_id
  }: {
    contract: string;
    msg: BinaryType;
    token_id: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      send_nft: {
        contract,
        msg,
        token_id: tokenId
      }
    }, \\"auto\\");
  };
  approve = async ({
    expires,
    spender,
    token_id
  }: {
    expires: Expiration;
    spender: string;
    token_id: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      approve: {
        expires,
        spender,
        token_id: tokenId
      }
    }, \\"auto\\");
  };
  revoke = async ({
    spender,
    token_id
  }: {
    spender: string;
    token_id: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      revoke: {
        spender,
        token_id: tokenId
      }
    }, \\"auto\\");
  };
  approveAll = async ({
    expires,
    operator
  }: {
    expires: Expiration;
    operator: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      approve_all: {
        expires,
        operator
      }
    }, \\"auto\\");
  };
  revokeAll = async ({
    operator
  }: {
    operator: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      revoke_all: {
        operator
      }
    }, \\"auto\\");
  };
  mint = async (): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      mint: {}
    }, \\"auto\\");
  };
  burn = async ({
    token_id
  }: {
    token_id: string;
  }): Promise<ExecuteResult> => {
    return await this.client.execute(this.sender, this.contractAddress, {
      burn: {
        token_id: tokenId
      }
    }, \\"auto\\");
  };
}"
`;

exports[`execute interfaces no extends 1`] = `
"export interface SG721Instance {
  contractAddress: string;
  sender: string;
  transferNft: ({
    recipient,
    token_id
  }: {
    recipient: string;
    token_id: string;
  }) => Promise<ExecuteResult>;
  sendNft: ({
    contract,
    msg,
    token_id
  }: {
    contract: string;
    msg: BinaryType;
    token_id: string;
  }) => Promise<ExecuteResult>;
  approve: ({
    expires,
    spender,
    token_id
  }: {
    expires: Expiration;
    spender: string;
    token_id: string;
  }) => Promise<ExecuteResult>;
  revoke: ({
    spender,
    token_id
  }: {
    spender: string;
    token_id: string;
  }) => Promise<ExecuteResult>;
  approveAll: ({
    expires,
    operator
  }: {
    expires: Expiration;
    operator: string;
  }) => Promise<ExecuteResult>;
  revokeAll: ({
    operator
  }: {
    operator: string;
  }) => Promise<ExecuteResult>;
  mint: () => Promise<ExecuteResult>;
  burn: ({
    token_id
  }: {
    token_id: string;
  }) => Promise<ExecuteResult>;
}"
`;

exports[`instantiate_msg 1`] = `
"export interface InstantiateMsg {
  collectionInfo: CollectionInfo_for_RoyaltyInfoResponse;
  minter: string;
  name: string;
  symbol: string;
}"
`;

exports[`nft_info_response 1`] = `
"export interface NftInfoResponse {
  extension: Empty;
  tokenUri: string;
}"
`;

exports[`num_tokens_response 1`] = `
"export interface NumTokensResponse {
  count: number;
}"
`;

exports[`operators_response 1`] = `
"export interface OperatorsResponse {
  operators: Approval[];
}"
`;

exports[`owner_of_response 1`] = `
"export interface OwnerOfResponse {
  approvals: Approval[];
  owner: string;
}"
`;

exports[`query classes 1`] = `
"export class SG721QueryClient implements SG721ReadOnlyInstance {
  client: CosmWasmClient;
  contractAddress: string;

  constructor(client: CosmWasmClient, contractAddress: string) {
    this.client = client;
    this.contractAddress = contractAddress;
    this.ownerOf = this.ownerOf.bind(this);
    this.approval = this.approval.bind(this);
    this.approvals = this.approvals.bind(this);
    this.allOperators = this.allOperators.bind(this);
    this.numTokens = this.numTokens.bind(this);
    this.contractInfo = this.contractInfo.bind(this);
    this.nftInfo = this.nftInfo.bind(this);
    this.allNftInfo = this.allNftInfo.bind(this);
    this.tokens = this.tokens.bind(this);
    this.allTokens = this.allTokens.bind(this);
    this.minter = this.minter.bind(this);
    this.collectionInfo = this.collectionInfo.bind(this);
  }

  ownerOf = async ({
    include_expired,
    token_id
  }: {
    include_expired: boolean;
    token_id: string;
  }): Promise<OwnerOfResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      owner_of: {
        include_expired: includeExpired,
        token_id: tokenId
      }
    });
  };
  approval = async ({
    include_expired,
    spender,
    token_id
  }: {
    include_expired: boolean;
    spender: string;
    token_id: string;
  }): Promise<ApprovalResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      approval: {
        include_expired: includeExpired,
        spender,
        token_id: tokenId
      }
    });
  };
  approvals = async ({
    include_expired,
    token_id
  }: {
    include_expired: boolean;
    token_id: string;
  }): Promise<ApprovalsResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      approvals: {
        include_expired: includeExpired,
        token_id: tokenId
      }
    });
  };
  allOperators = async ({
    include_expired,
    limit,
    owner,
    start_after
  }: {
    include_expired: boolean;
    limit: number;
    owner: string;
    start_after: string;
  }): Promise<AllOperatorsResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      all_operators: {
        include_expired: includeExpired,
        limit,
        owner,
        start_after: startAfter
      }
    });
  };
  numTokens = async (): Promise<NumTokensResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      num_tokens: {}
    });
  };
  contractInfo = async (): Promise<ContractInfoResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      contract_info: {}
    });
  };
  nftInfo = async ({
    token_id
  }: {
    token_id: string;
  }): Promise<NftInfoResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      nft_info: {
        token_id: tokenId
      }
    });
  };
  allNftInfo = async ({
    include_expired,
    token_id
  }: {
    include_expired: boolean;
    token_id: string;
  }): Promise<AllNftInfoResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      all_nft_info: {
        include_expired: includeExpired,
        token_id: tokenId
      }
    });
  };
  tokens = async ({
    limit,
    owner,
    start_after
  }: {
    limit: number;
    owner: string;
    start_after: string;
  }): Promise<TokensResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      tokens: {
        limit,
        owner,
        start_after: startAfter
      }
    });
  };
  allTokens = async ({
    limit,
    start_after
  }: {
    limit: number;
    start_after: string;
  }): Promise<AllTokensResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      all_tokens: {
        limit,
        start_after: startAfter
      }
    });
  };
  minter = async (): Promise<MinterResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      minter: {}
    });
  };
  collectionInfo = async (): Promise<CollectionInfoResponse> => {
    return this.client.queryContractSmart(this.contractAddress, {
      collection_info: {}
    });
  };
}"
`;

exports[`query interfaces 1`] = `
"export interface SG721ReadOnlyInstance {
  contractAddress: string;
  ownerOf: ({
    include_expired,
    token_id
  }: {
    include_expired: boolean;
    token_id: string;
  }) => Promise<OwnerOfResponse>;
  approval: ({
    include_expired,
    spender,
    token_id
  }: {
    include_expired: boolean;
    spender: string;
    token_id: string;
  }) => Promise<ApprovalResponse>;
  approvals: ({
    include_expired,
    token_id
  }: {
    include_expired: boolean;
    token_id: string;
  }) => Promise<ApprovalsResponse>;
  allOperators: ({
    include_expired,
    limit,
    owner,
    start_after
  }: {
    include_expired: boolean;
    limit: number;
    owner: string;
    start_after: string;
  }) => Promise<AllOperatorsResponse>;
  numTokens: () => Promise<NumTokensResponse>;
  contractInfo: () => Promise<ContractInfoResponse>;
  nftInfo: ({
    token_id
  }: {
    token_id: string;
  }) => Promise<NftInfoResponse>;
  allNftInfo: ({
    include_expired,
    token_id
  }: {
    include_expired: boolean;
    token_id: string;
  }) => Promise<AllNftInfoResponse>;
  tokens: ({
    limit,
    owner,
    start_after
  }: {
    limit: number;
    owner: string;
    start_after: string;
  }) => Promise<TokensResponse>;
  allTokens: ({
    limit,
    start_after
  }: {
    limit: number;
    start_after: string;
  }) => Promise<AllTokensResponse>;
  minter: () => Promise<MinterResponse>;
  collectionInfo: () => Promise<CollectionInfoResponse>;
}"
`;

exports[`tokens_response 1`] = `
"export interface TokensResponse {
  tokens: string[];
}"
`;
